Added Charts back in

--- a/index.html
+++ b/index.html
@@ -228,6 +228,26 @@
   
 </div>
 
+<div id="chart-left" class="inactivepanel">
+  <div id="chart-left-title">
+    <h1 id="sector_funding_title">Funding by Project</h1>
+  </div>
+  <div id="chart-left-stat">
+    <h1 id="sector_funding_total"></h1>
+    <h2 id="sector_funding_description"></h2>
+  </div>
+  <div id="chart-left-pie-chart"></div>
+</div>
+
+<div id="chart-right" class="inactivepanel">
+  <div id="chart-right-title">
+    <h1>Overview Funding By Sector</h1>
+  </div>
+  <div id="chart-right-stat-subtitle">
+    <h1 id="funding_total"></h1>
+  </div>
+  <div id="chart-right-graph"></div>
+</div>
 
 
 
