Cleaning up IE issues

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <ul>
     <li class="">
     
-    There are currently several countries available in "Locations" below, and more being added continuously.</li>
+    Investigate World Bank projects in currently highlighted countries using "Locations" tab.</li>
   </ul>
 </div>
 <div class="dropmenuholder">
