--- a/lac/index.html
+++ b/lac/index.html
@@ -237,7 +237,7 @@
 
 <div id="chart-right" class="">
   <div id="chart-right-title">
-    <h1>Overview Financing By Project</h1>
+    <h1>Overview Financing By Country</h1>
   </div>
   <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
