Styling bolivia project

--- a/lac/bolivia/P073367.html
+++ b/lac/bolivia/P073367.html
@@ -129,7 +129,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" >BOLIVIA / <span id="map-title">Projects by Poverty</span></a>
+          <li class="first"><a href="javascript:return false;" >Bolivia: Decentralized Infrastructure for Rural Transformation Project</span></a>
             <ul>
               
                 <li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li>
@@ -172,13 +172,12 @@
   </div>
   <div id="map_console">
       <div class="console-title">
-        <p id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <p id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p id="project_count">1</p>
+        <p id="activity_count">140</p>
       </div>
       <div class="console-info">
-        <div id="loading">Loading Map Data...</div>
-        <p class="loaded" style="display: none" title="Active projects as of June 30, 2010">active projects working in</p>
-        <p class="loaded" style="display: none" title="Project locations as of June 30, 2010">mapped project locations</p>
+        <p class="loaded" style="" title="Active projects as of June 30, 2010">active projects working in</p>
+        <p class="loaded" style="" title="Project locations as of June 30, 2010">mapped project locations</p>
       </div>    
       <div id="layerinfo">
   <ul>
@@ -249,7 +248,7 @@
   
 </div>
 
-<div id="chart-left" class="">
+<div id="chart-left" class="" style="display: none">
   <div id="chart-left-title">
     <h1 id="sector_funding_title">Financing by Sector</h1>
   </div>
@@ -261,7 +260,7 @@
   <div id="chart-left-pie-chart-description" class="chart_about">Financing as a percentage of country and sector financing.</div>
 </div>
 
-<div id="chart-right" class="">
+<div id="chart-right" class="" style="display: none">
   <div id="chart-right-title">
     <h1>Overview Financing By Project</h1>
   </div>
@@ -274,7 +273,7 @@
 
 
 <!--Project Search Bar Begins-->
-<div id="projects-bar" class="expanded">
+<div id="projects-bar" class="expanded" style="display: none">
   <div class="project-bar-text"><img src="/images/down-arrow-black.gif" alt="" width="11" height="7" class="img-margins" />&nbsp;&nbsp;&nbsp;&nbsp;Total Project List / Bolivia</div>
   <div id="div">
     <form action="/" accept-charset="UTF-8" method="post" id="search-theme-form">
@@ -283,7 +282,7 @@
   </div>
 </div>
 <!--Table Data Begins-->
-<div id="projects-table" style="width:960px; float:left">
+<div id="projects-table" style="width:960px; float:left; display: none">
 </div>
 <!--Data Table Ends-->
 
