Fixing for projects

--- a/lac/bolivia/P073367.html
+++ b/lac/bolivia/P073367.html
@@ -293,7 +293,7 @@
 
   var wb = new F1.WorldBank();
       
-  wb.init(116,  "Bolivia: Decentralized Infrastructure for Rural Transformation Project", {});
+  wb.init(116, "Project", {title:"Bolivia: Decentralized Infrastructure for Rural Transformation Project"});
   
   
 </script>
