Styled project name better

--- a/lac/bolivia/P073367.html
+++ b/lac/bolivia/P073367.html
@@ -147,8 +147,7 @@
             <div id="map-content-icons">
         <div id="map-content-icons2">
           <ul>
-            <li class="sectors">Project:</li>
-            <li class="s1">Decentralized Infrastructure for Rural Transformation Project</li>
+            <li class="sectors" style="width: 100%; float: right;">Project: Decentralized Infrastructure for Rural Transformation Project</li>
           </ul>
         </div>
       </div>
