--- a/404.html
+++ b/404.html
@@ -71,11 +71,11 @@
       <div class="navigation"> <a class="network-home" href="http://www.worldbank.org">The World Bank</a>
         <ul class="links network-links">
           <li><a href="http://www.worldbank.org/about">About</a></li>
-          <li><a class="active" href="http://data.worldbank.org">Data</a></li>
+          <li><a href="http://data.worldbank.org">Data</a></li>
           <li><a href="http://econ.worldbank.org">Research</a></li>
           <li><a href="http://www.worldbank.org/wbi">Learning</a></li>
           <li><a href="http://www.worldbank.org/news">News</a></li>
-          <li><a href="http://www.worldbank.org/projects">Projects &amp; Operations</a></li>
+          <li><a href="http://www.worldbank.org/projects" class="active">Projects &amp; Operations</a></li>
           <li class="last"><a href="http://www.worldbank.org/reference">Publications</a></li>
         </ul>
         <ul class="links network-special-links">
@@ -169,10 +169,11 @@
   <div id="share-pane">
     <span class="close">Close</span>
     <ul class="links">
-      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+http%3A%2F%2Fmaps.worldbank.org" target="_new">Twitter</a></li>
-      <li class="facebook"><a href="http://facebook.com/share.php?u=http%3A%2F%2Fmaps.worldbank.org" target="_new">Facebook</a></li>
-      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=http%3A%2F%2Fmaps.worldbank.org" target="_new">Delicious</a></li>
-      <li class="email last"><a href="mailto:?Subject=World%20Bank%20Maps&Body=World%20Bank%20Maps%20%28http%3A%2F%2Fmaps.worldbank.org">E-Mail</a></li>
+      
+      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+http%3A%2F%2Fmaps.worldbank.org%2F"  target="_new">Twitter</a></li>
+      <li class="facebook"><a href="http://facebook.com/share.php?u=http%3A%2F%2Fmaps.worldbank.org%2F" target="_new">Facebook</a></li>
+      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=http%3A%2F%2Fmaps.worldbank.org%2F" target="_new">Delicious</a></li>
+      <li class="email last"><a href="mailto:?Subject=World%20Bank%20Maps&Body=World%20Bank%20Maps%20%28http%3A%2F%2Fmaps.worldbank.org%2F">E-Mail</a></li>
     </ul>
   </div>
   <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
@@ -189,4 +190,46 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
+<!-- code for http://maps.worldbank.org -->
+<!-- SiteCatalyst code version: G.6. Copyright 1997-2004 Omniture, Inc. More info available at http://www.omniture.com -->
+<script language="JavaScript" src="http://siteresources.worldbank.org/SITEMGR/Resources/WebStatsUtil.js"></script>
+<script language="JavaScript">
+<!--
+var s_pageName="";
+var s_channel="WBG Mapping for Results EXT";
+var s_hier1 = "WBG,WBG Mapping for Results EXT";
+var s_prop1 = "";
+var s_prop2 = "Not Available"; /* Author /
+var s_prop3 = "Not Available"; / Date /
+var s_prop4 = "Not Available"; / Topic /
+var s_prop5 = "Not Available"; / Sub Topic /
+var s_prop6 = "Not Available"; / Region /
+var s_prop7 = "Not Available"; / Country /
+var s_prop8 = "Not Available"; / DocType /
+var s_prop9 = "Not Available"; / MDK or unique identifier /
+var s_prop10 = "Live"; / Site Status /
+var s_prop11 = "Not Available"; / Data Source /
+var s_prop13 = "WBG"; / VPU /
+var s_prop16="English"; / doc language /
+var s_prop17="English"; / site language */
+
+var omnitureCookieContent= getCookieValueByName('omniture');
+var s_prop18 =getVPU(omnitureCookieContent);
+var s_prop19 =getDutyStation(omnitureCookieContent);
+var s_prop20 =getUserType(omnitureCookieContent);
+
+var sTitle = document.title;
+var asTitleParts = sTitle.split("-");
+while (sTitle.indexOf(",") > -1)
+sTitle = sTitle.replace(",", "");
+
+s_pageName = sTitle;
+s_prop1 = sTitle;
+s_hier1 += ", " + sTitle;
+
+var s_account="wbnispextgeomfr";
+//-->
+</script>
+<script language="JavaScript" src="http://siteresources.worldbank.org/scripts/s_code_remote.js"></script>
+<!-- End SiteCatalyst code version: G.6. -->
 </body></html>
