Adding sectors in for countries

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
   var regions = {"SOUTH ASIA":32979,"MIDDLE EAST AND NORTH AFRICA":7731,"EAST ASIA AND PACIFIC":27010,"LATIN AMERICA AND CARIBBEAN":31874,"AFRICA":35617,"OTHER":0,"EUROPE AND CENTRAL ASIA":21562};
      
      
-  wb.init(353,  "World", {projects_count: '2667', locations_count: '15,246', sectors: sectors, regions: regions });
+  wb.init(353,  "World",  "", {projects_count: '2667', locations_count: '15,246', sectors: sectors, regions: regions });
 
   
   
