Adding in Product line charts

--- a/lac/bolivia/P073367.html
+++ b/lac/bolivia/P073367.html
@@ -268,7 +268,7 @@
 
   var wb = new F1.WorldBank();
       
-  wb.init(116, "Project", {title:"Decentralized Infrastructure for Rural Transformation Project"});
+  wb.init(116, "Project", "Project", {title:"Decentralized Infrastructure for Rural Transformation Project"});
   
   
 </script>
