--- a/lac/haiti.html
+++ b/lac/haiti.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>The World Bank - Mapping for Results, Latin America and Caribbean, Haiti</title>
+  <title>The World Bank - Mapping for Results, Latin America and Caribbean > Haiti</title>
 
   <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
   
@@ -266,6 +266,17 @@
   <div id="chart-right-graph"></div>
   <div id="chart-right-graph-description" class="chart_about">Individual financing by each project in Haiti, colorized by the major sector.</div>
 </div>
+<script type="text/javascript" charset="utf-8">
+
+
+  var wb = new F1.WorldBank();
+  
+  var projects = [{id: 'P121193',project_name: 'Education for All Project - Additional Financing',totalamt: 12.0,mjsector1: 'Education',boardapprovaldate: 'May-2010',majorsector_percent: [{"Name":"Education ","Percent":"83 "},{"Name":"Public Administration, Law, and Justice ","Percent":"9 "},{"Name":"Health and other social services ","Percent":"8 "}],sector_code: ''},{id: 'P090159',project_name: 'Emergency Recovery and Disaster Management',totalamt: 12.0,mjsector1: 'Health and Other Social Services',boardapprovaldate: 'Jan-2005',majorsector_percent: [{"Name":"Health and other social services ","Percent":"50 "},{"Name":"Public Administration, Law, and Justice ","Percent":"30 "},{"Name":"Water, sanitation and flood protection ","Percent":"10 "},{"Name":"Industry and trade ","Percent":"10 "}],sector_code: ''},{id: 'P114775',project_name: 'Community-Driven Development (CDD) Additional Financing',totalamt: 8.0,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Jan-2009',majorsector_percent: [{"Name":"Agriculture, fishing, and forestry ","Percent":"70 "},{"Name":"Transportation ","Percent":"20 "},{"Name":"Education ","Percent":"5 "},{"Name":"Health and other social services ","Percent":"3 "},{"Name":"Water, sanitation and flood protection ","Percent":"2 "}],sector_code: ''},{id: 'P089839',project_name: 'Haiti Rural Water and Sanitation Project',totalamt: 5.0,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Jan-2007',majorsector_percent: [{"Name":"Water, sanitation and flood protection ","Percent":"63 "},{"Name":"Water, sanitation and flood protection ","Percent":"25 "},{"Name":"Health and other social services ","Percent":"12 "}],sector_code: ''},{id: 'P120914',project_name: 'Emergency program for solar power generation and lighting for Haiti, as a consequence of the Earthquake in Port au Prince.',totalamt: 0.0,mjsector1: 'Energy and Mining',boardapprovaldate: 'May-2010',majorsector_percent: [{"Name":"Energy and mining ","Percent":"100 "}],sector_code: ''},{id: 'P106689',project_name: 'Haiti Emergency Recovery and Disaster Management (Additional Financing)',totalamt: 7.0,mjsector1: 'Health and Other Social Services',boardapprovaldate: 'Jan-2008',majorsector_percent: [{"Name":"Health and other social services ","Percent":"62 "},{"Name":"Water, sanitation and flood protection ","Percent":"10 "},{"Name":"Agriculture, fishing, and forestry ","Percent":"10 "},{"Name":"Education ","Percent":"9 "},{"Name":"Health and other social services ","Percent":"9 "}],sector_code: ''}];
+      
+  wb.init(114,  "Haiti", "Latin America and Caribbean", {projects_count: '6', locations_count: '319', projects: projects, locations_layer: 0});
+  
+  
+</script>
 
 
 <!--Project Search Bar Begins-->
@@ -284,17 +295,6 @@
 
 
 
-<script type="text/javascript" charset="utf-8">
-
-
-  var wb = new F1.WorldBank();
-  
-  var projects = [{id: 'P113623',project_name: 'Strengthening the Management of Agriculture Public Services (GFRP)',totalamt: 5,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Jun-2009',sector_code: 'AX'},{id: 'P111667',project_name: 'AVIAN INFLUENZA CONTROL AND HUMAN INFLUENZA EMERGENCY PREPARDNESS AND CONTROL',totalamt: 1.56,mjsector1: 'Public Administration, Law, and Justice',boardapprovaldate: 'Jul-2008',sector_code: 'BX'},{id: 'P120895',project_name: 'Infrastructure &amp; Institutions Emergency Recovery',totalamt: 65,mjsector1: 'Transportation',boardapprovaldate: 'Mar-2010',sector_code: 'TX'},{id: 'P115261',project_name: 'HT: Emergency School Reconstruction Project',totalamt: 5,mjsector1: 'Education',boardapprovaldate: 'Mar-2009',sector_code: 'EX'},{id: 'P114174',project_name: 'Haiti Education for All Fast-Track Initiative Catalytic Fund',totalamt: 0,mjsector1: 'Education',boardapprovaldate: 'May-2010',sector_code: 'EX'},{id: 'P121193',project_name: 'Education for All Project - Additional Financing',totalamt: 12,mjsector1: 'Education',boardapprovaldate: 'May-2010',sector_code: 'EX'},{id: 'P099918',project_name: 'HT Education For All Adaptable Program Grant Phase 1',totalamt: 25,mjsector1: 'Education',boardapprovaldate: 'Apr-2007',sector_code: 'EX'},{id: 'P101975',project_name: 'HT-School Feeding Program (TF056944 DGF)',totalamt: 0,mjsector1: 'Education',boardapprovaldate: 'Jul-2006',sector_code: 'EX'},{id: 'P121833',project_name: 'Housing Reconstruction - Urban Community Driven Development Additional Financing',totalamt: 30,mjsector1: 'Industry and Trade',boardapprovaldate: 'Oct-2010',sector_code: 'YX'},{id: 'P121690',project_name: 'Household Development Agent Pilot',totalamt: 0,mjsector1: 'Health and Other Social Services',boardapprovaldate: 'Sep-2010',sector_code: 'JX'},{id: 'P114936',project_name: 'Rural Water and Sanitation Project - SPF',totalamt: 0,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Nov-2008',sector_code: 'WX'},{id: 'P112164',project_name: 'HT (AF) Electricity Loss Reduction Project',totalamt: 5,mjsector1: 'Public Administration, Law, and Justice',boardapprovaldate: 'Sep-2009',sector_code: 'BX'},{id: 'P093640',project_name: 'Haiti Community Driven Development (CDD) Project / PRODEP',totalamt: 38,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Jul-2005',sector_code: 'AX'},{id: 'P118139',project_name: 'Rural Community Driven Development - Additional Financing II',totalamt: 15,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'May-2010',sector_code: 'AX'},{id: 'P114059',project_name: 'Transport and Territorial Development Additional Financing',totalamt: 12,mjsector1: 'Transportation',boardapprovaldate: 'Dec-2009',sector_code: 'TX'},{id: 'P106621',project_name: 'HT - MEETING TEACHER NEEDS FOR EFA',totalamt: 6,mjsector1: 'Education',boardapprovaldate: 'Apr-2008',sector_code: 'EX'},{id: 'P098531',project_name: 'HT Electricity Project',totalamt: 6,mjsector1: 'Energy and Mining',boardapprovaldate: 'Aug-2006',sector_code: 'LX'},{id: 'P114775',project_name: 'Community-Driven Development (CDD) Additional Financing',totalamt: 8,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Jan-2009',sector_code: 'AX'},{id: 'P106699',project_name: 'Haiti - Urban Community Driven Development Project / PRODEPUR',totalamt: 15.7,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Jun-2008',sector_code: 'WX'},{id: 'P095523',project_name: 'Haiti Transport and Territorial Development Project',totalamt: 16,mjsector1: 'Transportation',boardapprovaldate: 'Apr-2006',sector_code: 'TX'},{id: 'P090159',project_name: 'Emergency Recovery and Disaster Management',totalamt: 12,mjsector1: 'Health and Other Social Services',boardapprovaldate: 'Jan-2005',sector_code: 'JX'},{id: 'P120914',project_name: 'Emergency program for solar power generation and lighting for Haiti, as a consequence of the Earthquake in Port au Prince.',totalamt: 0,mjsector1: 'Energy and Mining',boardapprovaldate: 'May-2010',sector_code: 'LX'},{id: 'P114292',project_name: 'HT Emergency Bridge Reconst &amp; Vulnerab Reduction Project',totalamt: 20,mjsector1: 'Transportation',boardapprovaldate: 'Nov-2008',sector_code: 'TX'},{id: 'P108937',project_name: 'HT-Avian and Human Influenza (AHI)',totalamt: 0,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Feb-2008',sector_code: 'AX'},{id: 'P106689',project_name: 'Haiti Emergency Recovery and Disaster Management (Additional Financing)',totalamt: 7.4,mjsector1: 'Health and Other Social Services',boardapprovaldate: 'Jan-2008',sector_code: 'JX'},{id: 'P089839',project_name: 'Haiti Rural Water and Sanitation Project',totalamt: 5,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Jan-2007',sector_code: 'WX'},{id: 'P104690',project_name: 'Haiti Catastrophe Insurance Project',totalamt: 9,mjsector1: 'Finance',boardapprovaldate: 'Mar-2007',sector_code: 'FX'},{id: 'P095371',project_name: 'HT Economic Governance TAG II',totalamt: 2,mjsector1: 'Public Administration, Law, and Justice',boardapprovaldate: 'Jun-2006',sector_code: 'BX'}];
-      
-  wb.init(114,  "Haiti", "Latin America and Caribbean", {projects_count: '28', locations_count: '319', projects: projects, locations_layer: 0});
-  
-  
-</script>
 
 
         <div id="footnote">Current locations as of June 30, 2010.</div>
@@ -356,16 +356,16 @@
 <script language="JavaScript" src="http://siteresources.worldbank.org/SITEMGR/Resources/WebStatsUtil.js"></script>
 <script language="JavaScript">
 <!--
-var s_pageName="";
+var s_pageName="Home > Maps > , Latin America and Caribbean > Haiti";
 var s_channel="WBG Mapping for Results EXT";
 var s_hier1 = "WBG,WBG Mapping for Results EXT";
 var s_prop1 = "";
+var s_prop6 = "Latin America and Caribbean"; / Region /
+var s_prop7 = "Haiti"; / Country /
 var s_prop2 = "Not Available"; /* Author /
 var s_prop3 = "Not Available"; / Date /
 var s_prop4 = "Not Available"; / Topic /
 var s_prop5 = "Not Available"; / Sub Topic /
-var s_prop6 = "Not Available"; / Region /
-var s_prop7 = "Not Available"; / Country /
 var s_prop8 = "Not Available"; / DocType /
 var s_prop9 = "Not Available"; / MDK or unique identifier /
 var s_prop10 = "Live"; / Site Status /
