--- a/lac/bolivia.html
+++ b/lac/bolivia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>The World Bank - Mapping for Results, Latin America and Caribbean, Bolivia</title>
+  <title>The World Bank - Mapping for Results, Latin America and Caribbean > Bolivia</title>
 
   <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
   
@@ -272,6 +272,17 @@
   <div id="chart-right-graph"></div>
   <div id="chart-right-graph-description" class="chart_about">Individual financing by each project in Bolivia, colorized by the major sector.</div>
 </div>
+<script type="text/javascript" charset="utf-8">
+
+
+  var wb = new F1.WorldBank();
+  
+  var projects = [{id: 'P006187',project_name: 'FIN SCTR',totalamt: 9.0,mjsector1: 'Finance',boardapprovaldate: 'Oct-1989',majorsector_percent: [{"Name":"Finance ","Percent":"50 "},{"Name":"Finance ","Percent":"39 "},{"Name":"Public Administration, Law, and Justice ","Percent":"11 "}],sector_code: ''},{id: 'P083979',project_name: 'Bolivia Urban Infrastructure Project',totalamt: 30.0,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Nov-2006',majorsector_percent: [{"Name":"Water, sanitation and flood protection ","Percent":"43 "},{"Name":"Public Administration, Law, and Justice ","Percent":"24 "},{"Name":"Health and other social services ","Percent":"16 "},{"Name":"Transportation ","Percent":"10 "},{"Name":"Water, sanitation and flood protection ","Percent":"7 "}],sector_code: ''},{id: 'P073367',project_name: 'Decentralized Infrastructure for Rural Transformation',totalamt: 20.0,mjsector1: 'Energy and Mining',boardapprovaldate: 'Jun-2003',majorsector_percent: [{"Name":"Energy and mining ","Percent":"34 "},{"Name":"Information and communications ","Percent":"33 "},{"Name":"Energy and mining ","Percent":"33 "}],sector_code: ''},{id: 'P068968',project_name: 'Road Rehabilitation and Maintenance Project',totalamt: 77.0,mjsector1: 'Transportation',boardapprovaldate: 'Apr-2002',majorsector_percent: [{"Name":"Transportation ","Percent":"97 "},{"Name":"Public Administration, Law, and Justice ","Percent":"3 "}],sector_code: ''},{id: 'P006192',project_name: 'FIN SEC ADJ SUPLM III',totalamt: 14.0,mjsector1: 'Finance',boardapprovaldate: 'Nov-1990',majorsector_percent: [{"Name":"Finance ","Percent":"50 "},{"Name":"Finance ","Percent":"39 "},{"Name":"Public Administration, Law, and Justice ","Percent":"11 "}],sector_code: ''},{id: 'P104092',project_name: 'Bolivia Urban Wastewater Methane Gas Capture',totalamt: 0.0,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'May-2007',majorsector_percent: [{"Name":"Water, sanitation and flood protection ","Percent":"100 "}],sector_code: ''},{id: 'P087925',project_name: 'Bolivia Land for Agricultural Development Project.',totalamt: 15.0,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Oct-2007',majorsector_percent: [{"Name":"Agriculture, fishing, and forestry ","Percent":"80 "},{"Name":"Public Administration, Law, and Justice ","Percent":"20 "}],sector_code: ''},{id: 'P083051',project_name: 'BO Rural Alliances',totalamt: 28.0,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'May-2005',majorsector_percent: [{"Name":"Agriculture, fishing, and forestry ","Percent":"70 "},{"Name":"Agriculture, fishing, and forestry ","Percent":"20 "},{"Name":"Industry and trade ","Percent":"10 "}],sector_code: ''},{id: 'P083965',project_name: 'BO-Secondary Education Transformation',totalamt: 10.0,mjsector1: 'Education',boardapprovaldate: 'Oct-2007',majorsector_percent: [{"Name":"Education ","Percent":"79 "},{"Name":"Education ","Percent":"12 "},{"Name":"Public Administration, Law, and Justice ","Percent":"9 "}],sector_code: ''},{id: 'P111863',project_name: 'BO (AF) Rural Alliances',totalamt: 30.0,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Apr-2009',majorsector_percent: [{"Name":"Agriculture, fishing, and forestry ","Percent":"45 "},{"Name":"Industry and trade ","Percent":"40 "},{"Name":"Industry and trade ","Percent":"10 "},{"Name":"Industry and trade ","Percent":"5 "}],sector_code: ''},{id: 'P109057',project_name: 'Emergency Recovery and Disaster Management Project (AF)',totalamt: 4.0,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Jun-2008',majorsector_percent: [{"Name":"Water, sanitation and flood protection ","Percent":"50 "},{"Name":"Transportation ","Percent":"20 "},{"Name":"Agriculture, fishing, and forestry ","Percent":"10 "},{"Name":"Education ","Percent":"10 "},{"Name":"Health and other social services ","Percent":"10 "}],sector_code: ''}];
+      
+  wb.init(262,  "Bolivia", "Latin America and Caribbean", {projects_count: '11', locations_count: '638', projects: projects, locations_layer: 0});
+  
+  
+</script>
 
 
 <!--Project Search Bar Begins-->
@@ -290,17 +301,6 @@
 
 
 
-<script type="text/javascript" charset="utf-8">
-
-
-  var wb = new F1.WorldBank();
-  
-  var projects = [{id: 'P106449',project_name: 'Emergency Recovery and Disaster Management Project',totalamt: 12.5,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Dec-2007',sector_code: 'WX'},{id: 'P006187',project_name: 'FIN SCTR',totalamt: 9.1,mjsector1: 'Finance',boardapprovaldate: 'Oct-1989',sector_code: 'FX'},{id: 'P083979',project_name: 'Bolivia Urban Infrastructure Project',totalamt: 30,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Nov-2006',sector_code: 'WX'},{id: 'P073367',project_name: 'Decentralized Infrastructure for Rural Transformation',totalamt: 20,mjsector1: 'Energy and Mining',boardapprovaldate: 'Jun-2003',sector_code: 'LX'},{id: 'P101084',project_name: 'BO:  Investing in Children and Youth',totalamt: 17,mjsector1: 'Health and Other Social Services',boardapprovaldate: 'Mar-2008',sector_code: 'JX'},{id: 'P101426',project_name: 'Lake Titicaca Local Sustainable Development',totalamt: 20,mjsector1: 'Industry and Trade',boardapprovaldate: 'Dec-2007',sector_code: 'YX'},{id: 'P101206',project_name: 'Expanding Access to Reduce Health Inequities Project (APL III)--Former Health Sector Reform - Third Phase (APL III)',totalamt: 18.5,mjsector1: 'Health and Other Social Services',boardapprovaldate: 'Jan-2008',sector_code: 'JX'},{id: 'P068968',project_name: 'Road Rehabilitation and Maintenance Project',totalamt: 77,mjsector1: 'Transportation',boardapprovaldate: 'Apr-2002',sector_code: 'TX'},{id: 'P104092',project_name: 'Bolivia Urban Wastewater Methane Gas Capture',totalamt: 0,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'May-2007',sector_code: 'WX'},{id: 'P006192',project_name: 'FIN SEC ADJ SUPLM III',totalamt: 14.5,mjsector1: 'Finance',boardapprovaldate: 'Nov-1990',sector_code: 'FX'},{id: 'P087925',project_name: 'Bolivia Land for Agricultural Development Project.',totalamt: 15,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Oct-2007',sector_code: 'AX'},{id: 'P102479',project_name: 'Bolivia Decentralized Electricity for Universal Access',totalamt: 0,mjsector1: 'Energy and Mining',boardapprovaldate: 'Jul-2007',sector_code: 'LX'},{id: 'P101298',project_name: 'Second Participatory Rural Investment',totalamt: 20,mjsector1: 'Transportation',boardapprovaldate: 'Dec-2007',sector_code: 'TX'},{id: 'P083051',project_name: 'BO Rural Alliances',totalamt: 28.4,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'May-2005',sector_code: 'AX'},{id: 'P111863',project_name: 'BO (AF) Rural Alliances',totalamt: 30,mjsector1: 'Agriculture, Fishing, and Forestry',boardapprovaldate: 'Apr-2009',sector_code: 'AX'},{id: 'P083965',project_name: 'BO-Secondary Education Transformation',totalamt: 10,mjsector1: 'Education',boardapprovaldate: 'Oct-2007',sector_code: 'EX'},{id: 'P109057',project_name: 'Emergency Recovery and Disaster Management Project (AF)',totalamt: 4.4,mjsector1: 'Water, Sanitation, and Flood Protection',boardapprovaldate: 'Jun-2008',sector_code: 'WX'}];
-      
-  wb.init(262,  "Bolivia", "Latin America and Caribbean", {projects_count: '17', locations_count: '638', projects: projects, locations_layer: 0});
-  
-  
-</script>
 
 
         <div id="footnote">Current locations as of June 30, 2010.</div>
@@ -362,16 +362,16 @@
 <script language="JavaScript" src="http://siteresources.worldbank.org/SITEMGR/Resources/WebStatsUtil.js"></script>
 <script language="JavaScript">
 <!--
-var s_pageName="";
+var s_pageName="Home > Maps > , Latin America and Caribbean > Bolivia";
 var s_channel="WBG Mapping for Results EXT";
 var s_hier1 = "WBG,WBG Mapping for Results EXT";
 var s_prop1 = "";
+var s_prop6 = "Latin America and Caribbean"; / Region /
+var s_prop7 = "Bolivia"; / Country /
 var s_prop2 = "Not Available"; /* Author /
 var s_prop3 = "Not Available"; / Date /
 var s_prop4 = "Not Available"; / Topic /
 var s_prop5 = "Not Available"; / Sub Topic /
-var s_prop6 = "Not Available"; / Region /
-var s_prop7 = "Not Available"; / Country /
 var s_prop8 = "Not Available"; / DocType /
 var s_prop9 = "Not Available"; / MDK or unique identifier /
 var s_prop10 = "Live"; / Site Status /
