--- a/about.html
+++ b/about.html
@@ -415,16 +415,16 @@
 <script language="JavaScript" src="http://siteresources.worldbank.org/SITEMGR/Resources/WebStatsUtil.js"></script>
 <script language="JavaScript">
 <!--
-var s_pageName="";
+var s_pageName="Home > Maps > , About the Platform";
 var s_channel="WBG Mapping for Results EXT";
 var s_hier1 = "WBG,WBG Mapping for Results EXT";
 var s_prop1 = "";
+var s_prop6 = ""; / Region /
+var s_prop7 = ""; / Country /
 var s_prop2 = "Not Available"; /* Author /
 var s_prop3 = "Not Available"; / Date /
 var s_prop4 = "Not Available"; / Topic /
 var s_prop5 = "Not Available"; / Sub Topic /
-var s_prop6 = "Not Available"; / Region /
-var s_prop7 = "Not Available"; / Country /
 var s_prop8 = "Not Available"; / DocType /
 var s_prop9 = "Not Available"; / MDK or unique identifier /
 var s_prop10 = "Live"; / Site Status /
