--- a/afr/index.html
+++ b/afr/index.html
@@ -246,25 +246,25 @@
   <div id="chart-right-graph"></div>
   <div id="chart-right-graph-description" class="chart_about">Individual financing by each project in Africa, colorized by the major sector.</div>
 </div>
-
-
-
-
 <script type="text/javascript" charset="utf-8">
 
 
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"(Historic)Industry":9,"Public Administration, Law, and Justice":4163,"Health and Other Social Services":4667,"Industry and Trade":1109,"Transportation":8094,"Finance":1579,"Agriculture, Fishing, and Forestry":3948,"Information and Communications":415,"Water, Sanitation and Flood Protection":4297,"Energy and Mining":12033,"Education":3034,"(Historic)Economic Policy":0,"(Historic)Multisector":0};
-  var regions = {"Eastern Africa":0,"Syrian Arab Republic":0,"Republic of Djibouti":50,"Middle East and North Africa":0,"Republic of Mali":605,"Republic of Rwanda":261,"Republic of South Africa":3750,"Republic of Guinea":57,"Republic of Niger":238,"Republic of Liberia":207,"Somali Democratic Republic":0,"Gabonese Republic":40,"Central African Republic":82,"Democratic Republic of the Congo":2132,"Republic of Kenya":2286,"Republic of Cameroon":406,"People&apos;s Republic of Angola":427,"Republic of Benin":417,"Republic of Guinea-Bissau":38,"Republic of Malawi":452,"United Republic of Tanzania":2988,"Federal Republic of Nigeria":4353,"Republic of Seychelles":0,"Union of the Comoros":26,"People&apos;s Democratic Republic of Algeria":0,"Federal Democratic Republic of Ethiopia":3651,"Republic of Uganda":1937,"Republic of Zimbabwe":0,"Democratic Republic of Sao Tome and Prin":8,"Republic of Cote d&apos;Ivoire":778,"Republic of Burundi":371,"Republic of Chad":120,"Republic of Senegal":698,"Republic of Zambia":421,"Republic of The Gambia":42,"Republic of Botswana":614,"Republic of the Sudan":0,"Republic of Ghana":1237,"Republic of Namibia":7,"Kingdom of Morocco":1061,"Republic of Madagascar":812,"Africa":3656,"Republic of Sierra Leone":218,"Lebanese Republic":308,"Burkina Faso":652,"Southern Africa":0,"Republic of Cape Verde":24,"State of Eritrea":75,"Islamic Republic of Mauritania":250,"Kingdom of Lesotho":90,"Republic of Mozambique":825,"Republic of Yemen":1004,"West Bank and Gaza":0,"Republic of Congo":166,"Islamic Republic of Iran":344,"Republic of Togo":62,"Republic of Mauritius":138,"Republic of Tunisia":747,"Western Africa":0,"Arab Republic of Egypt":3421,"Hashemite Kingdom of Jordan":288,"Republic of Iraq":508};
+  var sectors = {"":0.0,"Education ":1178.75,"Transportation ":4096.99,"Public Administration, Law, and Justice ":2943.41,"Health and Other Social Services ":1704.04,"Energy and Mining ":3175.05,"Industry and Trade ":672.84,"Information and Communications ":58.9,"Agriculture, Fishing, and Forestry ":1242.5,"Water, Sanitation and Flood Protection ":2328.17,"Finance ":526.35};
+  var regions = {"Eastern Africa":0,"Republic of Liberia":40,"Republic of Rwanda":98,"Republic of Djibouti":37,"Republic of South Africa":0,"Republic of Guinea":142,"Republic of Niger":84,"Syrian Arab Republic":0,"Republic of Mali":324,"Central African Republic":17,"Democratic Republic of the Congo":1263,"Gabonese Republic":40,"Republic of Cameroon":166,"Republic of Kenya":1198,"People&apos;s Republic of Angola":87,"Republic of Benin":170,"Republic of Guinea-Bissau":5,"Republic of Malawi":189,"United Republic of Tanzania":1369,"Federal Republic of Nigeria":2638,"Union of the Comoros":13,"Federal Democratic Republic of Ethiopia":1096,"Republic of Uganda":1047,"Democratic Republic of Sao Tome and Prin":6,"Republic of Burundi":139,"Republic of Cote d&apos;Ivoire":516,"Republic of Senegal":437,"Republic of Chad":154,"Republic of The Gambia":20,"Republic of Ghana":598,"Republic of the Sudan":0,"Republic of Zambia":301,"Republic of Namibia":0,"Republic of Madagascar":716,"Republic of Sierra Leone":129,"Kingdom of Morocco":203,"Africa":1157,"Lebanese Republic":308,"Burkina Faso":338,"Republic of Cape Verde":15,"State of Eritrea":75,"Islamic Republic of Mauritania":205,"Republic of Congo":46,"West Bank and Gaza":0,"Kingdom of Lesotho":60,"Republic of Yemen":645,"Republic of Mozambique":432,"Islamic Republic of Iran":344,"Republic of Mauritius":0,"Western Africa":0,"Republic of Tunisia":216,"Republic of Togo":0,"Hashemite Kingdom of Jordan":114,"Republic of Iraq":259,"Arab Republic of Egypt":480};
      
      
-  wb.init(356,  "Africa",  "", {projects_count: '1032', locations_count: '4402', sectors: sectors, regions: regions });
+  wb.init(356,  "Africa",  "World", {projects_count: '450', locations_count: '4402', sectors: sectors, regions: regions });
 
   
   
 </script>
+
+
+
+
 
 
         <div id="footnote">Current locations as of June 30, 2010.</div>
@@ -326,16 +326,16 @@
 <script language="JavaScript" src="http://siteresources.worldbank.org/SITEMGR/Resources/WebStatsUtil.js"></script>
 <script language="JavaScript">
 <!--
-var s_pageName="";
+var s_pageName="Home > Maps > , Africa";
 var s_channel="WBG Mapping for Results EXT";
 var s_hier1 = "WBG,WBG Mapping for Results EXT";
 var s_prop1 = "";
+var s_prop6 = ""; / Region /
+var s_prop7 = "Africa"; / Country /
 var s_prop2 = "Not Available"; /* Author /
 var s_prop3 = "Not Available"; / Date /
 var s_prop4 = "Not Available"; / Topic /
 var s_prop5 = "Not Available"; / Sub Topic /
-var s_prop6 = "Not Available"; / Region /
-var s_prop7 = "Not Available"; / Country /
 var s_prop8 = "Not Available"; / DocType /
 var s_prop9 = "Not Available"; / MDK or unique identifier /
 var s_prop10 = "Live"; / Site Status /
