--- a/index.html
+++ b/index.html
@@ -252,25 +252,25 @@
   <div id="chart-right-graph"></div>
   <div id="chart-right-graph-description" class="chart_about">Financing by each Region across all Sectors</div>
 </div>
-
-
-
-
 <script type="text/javascript" charset="utf-8">
 
 
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"(Historic)Industry":9,"Public Administration, Law, and Justice":18567,"Health and Other Social Services":17398,"Industry and Trade":4448,"Transportation":34235,"(Historic)Oil & Gas":0,"Information and Communications":624,"Agriculture, Fishing, and Forestry":14754,"Finance":10286,"Water, Sanitation and Flood Protection":19849,"Education":11836,"Energy and Mining":24767,"(Historic)Multisector":0,"(Historic)Economic Policy":0};
-  var regions = {"SOUTH ASIA":32979,"MIDDLE EAST AND NORTH AFRICA":7731,"EAST ASIA AND PACIFIC":27010,"LATIN AMERICA AND CARIBBEAN":31874,"AFRICA":35617,"OTHER":0,"EUROPE AND CENTRAL ASIA":21562};
+  var sectors = {"":0.0,"Education ":4826.08,"Transportation ":14248.88,"Public Administration, Law, and Justice ":9956.14,"Health and Other Social Services ":5891.36,"Energy and Mining ":7830.09,"Industry and Trade ":1813.26,"Information and Communications ":157.11,"Water, Sanitation and Flood Protection ":8286.64,"Agriculture, Fishing, and Forestry ":5332.43,"Finance ":2889.01};
+  var regions = {"SOUTH ASIA":16073,"MIDDLE EAST AND NORTH AFRICA":2606,"EAST ASIA AND PACIFIC":12311,"LATIN AMERICA AND CARIBBEAN":7254,"AFRICA":15330,"OTHER":0,"EUROPE AND CENTRAL ASIA":7666};
      
      
-  wb.init(353,  "World",  "World", {projects_count: '2667', locations_count: '15,246', sectors: sectors, regions: regions });
+  wb.init(353,  "World",  "World", {projects_count: '1221', locations_count: '15,246', sectors: sectors, regions: regions });
 
   
   
 </script>
+
+
+
+
 
 
         <div id="footnote">Current locations as of June 30, 2010.</div>
@@ -332,16 +332,16 @@
 <script language="JavaScript" src="http://siteresources.worldbank.org/SITEMGR/Resources/WebStatsUtil.js"></script>
 <script language="JavaScript">
 <!--
-var s_pageName="";
+var s_pageName="Home > Maps > , World";
 var s_channel="WBG Mapping for Results EXT";
 var s_hier1 = "WBG,WBG Mapping for Results EXT";
 var s_prop1 = "";
+var s_prop6 = ""; / Region /
+var s_prop7 = "World"; / Country /
 var s_prop2 = "Not Available"; /* Author /
 var s_prop3 = "Not Available"; / Date /
 var s_prop4 = "Not Available"; / Topic /
 var s_prop5 = "Not Available"; / Sub Topic /
-var s_prop6 = "Not Available"; / Region /
-var s_prop7 = "Not Available"; / Country /
 var s_prop8 = "Not Available"; / DocType /
 var s_prop9 = "Not Available"; / MDK or unique identifier /
 var s_prop10 = "Live"; / Site Status /
