Added region to Lac

--- a/lac.html
+++ b/lac.html
@@ -260,7 +260,7 @@
   var regions = {"Republic of El Salvador":310,"Oriental Republic of Uruguay":384,"Republic of Panama":175,"Republic of Chile":102,"Republic of Peru":2174,"Grenada":16,"Caribbean":0,"Belize":15,"Republic of Haiti":319,"Central America":8,"Republic of Colombia":2885,"Barbados":35,"Republic of Paraguay":175,"Republic of Ecuador":15,"United Mexican States":6790,"Republic of Guyana":46,"Commonwealth of Dominica":1,"Dominican Republic":307,"Andean Countries":0,"Republic of Nicaragua":306,"Jamaica":135,"St. Vincent and the Grenadines":13,"Republic of Costa Rica":197,"Republic of Honduras":379,"Federative Republic of Brazil":10485,"Republic of Trinidad and Tobago":0,"Organization of Eastern Caribbean States":25,"Latin America":0,"St. Lucia":13,"Argentine Republic":5810,"Republic of Guatemala":430,"Plurinational State of Bolivia":324};
      
      
-  wb.init(357,  "Latin America and Caribbean",  "", {projects_count: '477', locations_count: '5192', sectors: sectors, regions: regions });
+  wb.init(357,  "Latin America and Caribbean",  "Latin America and Caribbean", {projects_count: '477', locations_count: '5192', sectors: sectors, regions: regions });
 
   
   
