Fixing JSLint map.js issues

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"":0.0,"Education ":4826.08,"Transportation ":14248.88,"Public Administration, Law, and Justice ":9956.14,"Health and Other Social Services ":5891.36,"Energy and Mining ":7830.09,"Industry and Trade ":1813.26,"Information and Communications ":157.11,"Water, Sanitation and Flood Protection ":8286.64,"Agriculture, Fishing, and Forestry ":5332.43,"Finance ":2889.01};
+  var sectors = {"Education":4826.08,"Transportation":14248.88,"Public Administration, Law, and Justice":9956.14,"Health and Other Social Services":5891.36,"Energy and Mining":7830.09,"Industry and Trade":1813.26,"Information and Communications":157.11,"Water, Sanitation and Flood Protection":8286.64,"Agriculture, Fishing, and Forestry":5332.43,"Finance":2889.01};
   var regions = {"SOUTH ASIA":16073,"MIDDLE EAST AND NORTH AFRICA":2606,"EAST ASIA AND PACIFIC":12311,"LATIN AMERICA AND CARIBBEAN":7254,"AFRICA":15330,"OTHER":0,"EUROPE AND CENTRAL ASIA":7666};
      
      
