Update from Projects API

--- a/lac.html
+++ b/lac.html
@@ -252,11 +252,11 @@
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"Transportation ":2034.03,"Education ":801.26,"Public Administration, Law, and Justice ":1384.43,"Health and Other Social Services ":809.87,"Energy and Mining ":324.25,"Industry and Trade ":149.23,"Information and Communications ":35.85,"Agriculture, Fishing, and Forestry ":369.36,"Water, Sanitation and Flood Protection ":1009.54,"Finance ":336.18};
-  var regions = {"Republic of El Salvador":142,"Republic of Chile":64,"Republic of Panama":71,"Oriental Republic of Uruguay":196,"Republic of Peru":269,"Grenada":12,"Belize":0,"Caribbean":0,"Republic of Haiti":44,"Central America":0,"Republic of Colombia":1264,"Republic of Paraguay":111,"United Mexican States":680,"Republic of Ecuador":0,"Dominican Republic":142,"Republic of Guyana":42,"Republic of Nicaragua":194,"St. Vincent and the Grenadines":13,"Republic of Honduras":152,"Republic of Costa Rica":102,"Federative Republic of Brazil":1471,"Organization of Eastern Caribbean States":2,"St. Lucia":10,"Latin America":0,"Republic of Trinidad and Tobago":0,"Plurinational State of Bolivia":237,"Republic of Guatemala":266,"Argentine Republic":1770};
+  var sectors = {"Health and Other Social Services":3571.49,"Public Administration, Law, and Justice":4663.86,"Industry and Trade":921.49,"Transportation":7413.63,"Information and Communications":156.07,"Finance":629.91,"Water, Sanitation and Flood Protection":3950.88,"Agriculture, Fishing, and Forestry":1163.55,"Education":2217.93,"Energy and Mining":1616.19};
+  var regions = {"Republic of El Salvador":292,"Oriental Republic of Uruguay":384,"Republic of Panama":135,"Republic of Chile":102,"Republic of Peru":2224,"Grenada":16,"Caribbean":0,"Belize":15,"Republic of Haiti":322,"Central America":0,"Republic of Colombia":2499,"Barbados":35,"Republic of Paraguay":275,"Republic of Ecuador":15,"United Mexican States":2632,"Republic of Guyana":46,"Commonwealth of Dominica":1,"Dominican Republic":307,"Andean Countries":0,"Republic of Nicaragua":337,"Jamaica":135,"St. Vincent and the Grenadines":13,"Republic of Costa Rica":197,"Republic of Honduras":379,"Federative Republic of Brazil":8181,"Republic of Trinidad and Tobago":0,"Organization of Eastern Caribbean States":25,"Latin America":0,"St. Lucia":13,"Argentine Republic":6871,"Republic of Guatemala":530,"Plurinational State of Bolivia":324};
      
      
-  wb.init(357,  "Latin America and Caribbean",  "World", {projects_count: '213', locations_count: '5192', sectors: sectors, regions: regions });
+  wb.init(357,  "Latin America and Caribbean",  "World", {projects_count: '487', locations_count: '5192', sectors: sectors, regions: regions });
 
   
   
