--- a/productline/CN/charts.html
+++ b/productline/CN/charts.html
@@ -73,11 +73,11 @@
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"Transportation ":0.0,"Public Administration, Law, and Justice ":0.0,"Energy and Mining ":0.0,"Industry and Trade ":0.0,"Information and Communications ":0.0,"Agriculture, Fishing, and Forestry ":0.0,"Water, Sanitation and Flood Protection ":0.0};
+  var sectors = {"Public Administration, Law, and Justice":0.0,"Health and Other Social Services":0.0,"Industry and Trade":0.0,"Transportation":0.0,"Information and Communications":0.0,"Water, Sanitation and Flood Protection":0.0,"Agriculture, Fishing, and Forestry":0.0,"Education":0.0,"Energy and Mining":0.0};
   var regions = {"SOUTH ASIA":0,"MIDDLE EAST AND NORTH AFRICA":0,"EAST ASIA AND PACIFIC":0,"AFRICA":0,"LATIN AMERICA AND CARIBBEAN":0,"EUROPE AND CENTRAL ASIA":0};
      
      
-  wb.init('',  "World",  "World", {projects_count: '74', locations_count: '', sectors: sectors, regions: regions });
+  wb.init('',  "World",  "World", {projects_count: '140', locations_count: '', sectors: sectors, regions: regions });
 
   
   
