--- a/productline/PE/charts.html
+++ b/productline/PE/charts.html
@@ -73,11 +73,11 @@
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"":0.0,"Education ":4826.08,"Transportation ":14188.28,"Public Administration, Law, and Justice ":9590.64,"Health and Other Social Services ":5861.36,"Energy and Mining ":6023.69,"Industry and Trade ":1813.26,"Information and Communications ":157.11,"Water, Sanitation and Flood Protection ":8286.64,"Agriculture, Fishing, and Forestry ":5232.43,"Finance ":2776.51};
-  var regions = {"SOUTH ASIA":15773,"MIDDLE EAST AND NORTH AFRICA":2506,"EAST ASIA AND PACIFIC":11936,"LATIN AMERICA AND CARIBBEAN":6604,"AFRICA":14480,"EUROPE AND CENTRAL ASIA":7466};
+  var sectors = {"Health and Other Social Services":13919.06,"Public Administration, Law, and Justice":20710.53,"Industry and Trade":4756.3,"Transportation":32171.75,"Information and Communications":670.42,"Agriculture, Fishing, and Forestry":11196.38,"Water, Sanitation and Flood Protection":17940.23,"Finance":6761.03,"Education":11613.2,"Energy and Mining":17812.1};
+  var regions = {"SOUTH ASIA":30927,"MIDDLE EAST AND NORTH AFRICA":8197,"EAST ASIA AND PACIFIC":23905,"LATIN AMERICA AND CARIBBEAN":25455,"AFRICA":30983,"EUROPE AND CENTRAL ASIA":18093};
      
      
-  wb.init('',  "World",  "World", {projects_count: '855', locations_count: '', sectors: sectors, regions: regions });
+  wb.init('',  "World",  "World", {projects_count: '1806', locations_count: '', sectors: sectors, regions: regions });
 
   
   
