--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"":0.0,"Education ":4826.08,"Transportation ":14248.88,"Public Administration, Law, and Justice ":9956.14,"Health and Other Social Services ":5891.36,"Energy and Mining ":7830.09,"Industry and Trade ":1813.26,"Information and Communications ":157.11,"Water, Sanitation and Flood Protection ":8286.64,"Agriculture, Fishing, and Forestry ":5332.43,"Finance ":2889.01};
-  var regions = {"SOUTH ASIA":16073,"MIDDLE EAST AND NORTH AFRICA":2606,"EAST ASIA AND PACIFIC":12311,"LATIN AMERICA AND CARIBBEAN":7254,"AFRICA":15330,"OTHER":0,"EUROPE AND CENTRAL ASIA":7666};
+  var sectors = {"Public Administration, Law, and Justice":21090.55,"Health and Other Social Services":13949.06,"Industry and Trade":4756.3,"Transportation":32375.75,"Information and Communications":684.42,"Agriculture, Fishing, and Forestry":11296.38,"Finance":6914.13,"Water, Sanitation and Flood Protection":17972.23,"Education":11613.2,"Energy and Mining":20126.98};
+  var regions = {"SOUTH ASIA":31227,"MIDDLE EAST AND NORTH AFRICA":8342,"EAST ASIA AND PACIFIC":24322,"LATIN AMERICA AND CARIBBEAN":26305,"AFRICA":32145,"OTHER":0,"EUROPE AND CENTRAL ASIA":18447};
      
      
-  wb.init(353,  "World",  "World", {projects_count: '1221', locations_count: '15,246', sectors: sectors, regions: regions });
+  wb.init(353,  "World",  "World", {projects_count: '2720', locations_count: '15,246', sectors: sectors, regions: regions });
 
   
   
