--- a/embed.html
+++ b/embed.html
@@ -6,5 +6,14 @@
 <script type="text/javascript" charset="utf-8">
 maker_map_370 = new F1.Maker.Map({map_id: "370", dom_id: "maker_map_370", uiLayers: false});
 </script>
+<h3>Example Embed</h3>
+<div style="background-color: #DDD; margin: 15px; padding: 5px; width: 500px">
+&lt;style&gt;#maker_map_370 {width: 100%; height: 400px;}&lt;/style&gt;
+&lt;div class=&quot;geocommons_map&quot; id=&quot;maker_map_370&quot;&gt;&lt;/div&gt;&lt;br/&gt;
+&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot; src=&quot;http://wbstaging.geocommons.com/javascripts/f1.api.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot;&gt;
+maker_map_370 = new F1.Maker.Map({map_id: &quot;370&quot;, dom_id: &quot;maker_map_370&quot;, uiLayers: false});
+&lt;/script&gt;
+</div>
 </body>
 </html>
