--- a/afr/kenya.html
+++ b/afr/kenya.html
@@ -250,7 +250,7 @@
 
 <div id="chart-left" class="">
   <div id="chart-left-title">
-    <h1 id="sector_funding_title">Financing by Sector</h1>
+    <h1 id="sector_funding_title">Active Portfolio by Sector</h1>
   </div>
   <div id="chart-left-stat">
     <h1 id="sector_funding_total"></h1>
@@ -262,7 +262,7 @@
 
 <div id="chart-right" class="">
   <div id="chart-right-title">
-    <h1>Overview Financing By Project</h1>
+    <h1>Portfolio Overview by Sector</h1>
   </div>
   <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
