--- a/lac/bolivia/P073367.html
+++ b/lac/bolivia/P073367.html
@@ -225,7 +225,7 @@
 
 <div id="chart-left" class="" style="display: none">
   <div id="chart-left-title">
-    <h1 id="sector_funding_title">Financing by Sector</h1>
+    <h1 id="sector_funding_title">Active Portfolio by Sector</h1>
   </div>
   <div id="chart-left-stat">
     <h1 id="sector_funding_total"></h1>
@@ -237,7 +237,7 @@
 
 <div id="chart-right" class="" style="display: none">
   <div id="chart-right-title">
-    <h1>Overview Financing By Project</h1>
+    <h1>Portfolio Overview by Sector</h1>
   </div>
   <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
