--- a/lac/haiti.html
+++ b/lac/haiti.html
@@ -133,7 +133,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" >HAITI  / Projects</a>
+          <li class="first"><a href="javascript:return false;" >HAITI  / Overview</a>
             <ul>
               
                 <li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li>
@@ -246,7 +246,7 @@
 
 <div id="chart-left" class="">
   <div id="chart-left-title">
-    <h1 id="sector_funding_title">Financing by Sector</h1>
+    <h1 id="sector_funding_title">Active Portfolio by Sector</h1>
   </div>
   <div id="chart-left-stat">
     <h1 id="sector_funding_total"></h1>
@@ -258,7 +258,7 @@
 
 <div id="chart-right" class="">
   <div id="chart-right-title">
-    <h1>Overview Financing By Project</h1>
+    <h1>Portfolio Overview by Sector</h1>
   </div>
   <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
