--- a/productline/PE/charts.html
+++ b/productline/PE/charts.html
@@ -59,7 +59,7 @@
 
 <div id="chart-right" class="">
   <div id="chart-right-title">
-    <h1>Overview Financing By Region</h1>
+    <h1>Portfolio Overview By Region</h1>
   </div>
   <div id="chart-right-stat-subtitle">
     <h1 id="funding_total"></h1>
@@ -73,11 +73,11 @@
   var wb = new F1.WorldBank();
   
   var projects = [];
-  var sectors = {"Health and Other Social Services":13919.06,"Public Administration, Law, and Justice":20710.53,"Industry and Trade":4756.3,"Transportation":32171.75,"Information and Communications":670.42,"Agriculture, Fishing, and Forestry":11196.38,"Water, Sanitation and Flood Protection":17940.23,"Finance":6761.03,"Education":11613.2,"Energy and Mining":17812.1};
-  var regions = {"SOUTH ASIA":30927,"MIDDLE EAST AND NORTH AFRICA":8197,"EAST ASIA AND PACIFIC":23905,"LATIN AMERICA AND CARIBBEAN":25455,"AFRICA":30983,"EUROPE AND CENTRAL ASIA":18093};
+  var sectors = {"Health and Other Social Services":13593.58,"Public Administration, Law, and Justice":19849.58,"Industry and Trade":4557.5,"Transportation":30885.77,"Information and Communications":650.22,"Agriculture, Fishing, and Forestry":10946.22,"Water, Sanitation and Flood Protection":17368.42,"Finance":6492.04,"Energy and Mining":17256.68,"Education":11020.99};
+  var regions = {"SOUTH ASIA":29682,"MIDDLE EAST AND NORTH AFRICA":7740,"EAST ASIA AND PACIFIC":22743,"LATIN AMERICA AND CARIBBEAN":24939,"AFRICA":29817,"EUROPE AND CENTRAL ASIA":17709};
      
      
-  wb.init('',  "World",  "World", {projects_count: '1806', locations_count: '', sectors: sectors, regions: regions });
+  wb.init('',  "World",  "World", {projects_count: '1710', locations_count: '', sectors: sectors, regions: regions });
 
   
   
