--- a/lac/haiti.html
+++ b/lac/haiti.html
@@ -110,10 +110,9 @@
                   </ul>
                 </div>
                 
-                <div class="overview-text"><p>Following the earthquake, the Haiti portfolio was restructured to direct resources toward urgent post-earthquake priorities through the reallocation of funds and the modification of activities in order to adapt to institutional capacity changes. To help Haiti recover from the January 12, 2010 earthquake, the World Bank Group has pledged US$479 million by mid-2011, including cancelling Haiti's remaining US$39 million debt to IDA, thanks to contributions by IDA.</p>
-<p>      As of today, the World Bank has delivered over half of this support: US$91 million are available to Government in the form of new projects, over US$106 million have been disbursed, of which 40 percent is in the form of budget support. The remaining 60 percent has been spent on community reconstruction, transitional offices and equipment for the Ministry of Finance, repairing damaged bridges and roads, draining canals, paying tuition fees for school children and providing them with meals, strengthening Haiti's resilience to disasters, and figuring out how to better manage and recycle debris
-</p>
-<p>Read more about the World Bank funding and projects on the <a class="readmore" href="http://web.worldbank.org/WBSITE/EXTERNAL/COUNTRIES/LACEXT/HAITIEXTN/0,,contentMDK:22251393~pagePK:1497618~piPK:217854~theSitePK:338165,00.html#wbsupport" target="new">Haiti Country Page »</a></p></div>
+                <div class="overview-text"><p>Following the January 12, 2010 earthquake in Haiti, the World Bank Group restructured its Haiti portfolio by reallocating resources and modifying activities toward urgent post-earthquake priorities. The World Bank Group pledged US$479 million for the first two years and has cancelled Haiti's remaining US$39 million debt to IDA.</p>
+<p>The following interactive map shows the World Bank's active project portfolio in Haiti as of January 2011 (including IDA and various grant-financed projects).</p>
+<p>Learn more about the World Bank's overall strategy in the <a class="readmore" href="http://web.worldbank.org/WBSITE/EXTERNAL/COUNTRIES/LACEXT/HAITIEXTN/0,,contentMDK:22251393~pagePK:1497618~piPK:217854~theSitePK:338165,00.html#wbsupport" target="new">Haiti Country Brief »</a></p></div>
                 
             </div>
           </div>
