--- a/lac/ie.html
+++ b/lac/ie.html
@@ -103,7 +103,7 @@
             <div id="block-nodeasblock-3273" class="block block-nodeasblock ">
               <div class="content">
                 <div class="overview-links">
-                  <p>Overview »</p>
+                  <p>Mapping Overview »</p>
                   <ul>
                     <li><a href="/about#context">Context</a></li>
                     <li><a href="/about#partners">Partners</a></li>
