Fixed header spacing & / Overview text

--- a/eap/philippines.html
+++ b/eap/philippines.html
@@ -130,7 +130,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" >PHILIPPINES  / Projects</a>
+          <li class="first"><a href="javascript:return false;" >PHILIPPINES  / <span id="map-title">Overview</span></a>
             <ul>
               
                 <li><a href="#" onclick="return wb.setState(null,'Poverty')">MDG1: Extreme Poverty</a></li>
