--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" >WORLD  / Projects</a>
+          <li class="first"><a href="javascript:return false;" >WORLD  / <span id="map-title">Overview</span></a>
             <ul>
               
               
