--- a/lac/index.html
+++ b/lac/index.html
@@ -130,7 +130,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" >LATIN AMERICA AND CARIBBEAN  / Projects</a>
+          <li class="first"><a href="javascript:return false;" >LATIN AMERICA AND CARIBBEAN  / <span id="map-title">Overview</span></a>
             <ul>
               
                 
