Edit pages include Results links and Location links

--- a/embed.html
+++ b/embed.html
@@ -1,18 +1,18 @@
 <html><head></head>
 <body>
-<style>#maker_map_370 {width: 100%; height: 400px;}</style>
-<div class="geocommons_map" id="maker_map_370"></div><br/>
-<script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/f1.api.js"></script>
+<style>#map_embed {width: 100%; height: 400px;}</style>
+<div class="geocommons_map" id="map_embed"></div><br/>
+<script type="text/javascript" charset="utf-8" src="http://maps.worldbank.org/javascripts/f1.api.js"></script>
 <script type="text/javascript" charset="utf-8">
-maker_map_370 = new F1.Maker.Map({map_id: "370", dom_id: "maker_map_370", uiLayers: false});
+var map = new F1.Maker.Map({map_id: "359", dom_id: "map_embed", uiLayers: false});
 </script>
 <h3>Example Embed</h3>
 <div style="background-color: #DDD; margin: 15px; padding: 5px; width: 500px">
-&lt;style&gt;#maker_map_370 {width: 100%; height: 400px;}&lt;/style&gt;
-&lt;div class=&quot;geocommons_map&quot; id=&quot;maker_map_370&quot;&gt;&lt;/div&gt;&lt;br/&gt;
-&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot; src=&quot;http://wbstaging.geocommons.com/javascripts/f1.api.js&quot;&gt;&lt;/script&gt;
+&lt;style&gt;#map_embed {width: 100%; height: 400px;}&lt;/style&gt;
+&lt;div class=&quot;geocommons_map&quot; id=&quot;map_embed&quot;&gt;&lt;/div&gt;&lt;br/&gt;
+&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot; src=&quot;http://maps.worldbank.org/javascripts/f1.api.js&quot;&gt;&lt;/script&gt;
 &lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot;&gt;
-maker_map_370 = new F1.Maker.Map({map_id: &quot;370&quot;, dom_id: &quot;maker_map_370&quot;, uiLayers: false});
+var map = new F1.Maker.Map({map_id: &quot;359&quot;, dom_id: &quot;map_embed&quot;, uiLayers: false});
 &lt;/script&gt;
 </div>
 </body>
