Beginning the caching

--- a/lac/ie.html
+++ b/lac/ie.html
@@ -14,7 +14,7 @@
   <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
   <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
 
-<script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/prototype.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://maps.worldbank.org/javascripts/prototype.js"></script>
 
   <script type="text/javascript" src="/js/jquery-1.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -29,9 +29,9 @@
   <script type="text/javascript" src="/js/effects.js"></script>  
 
 <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
-<script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/f1.api.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://maps.worldbank.org/javascripts/f1.api.js"></script>
 
-<script src="http://wbstaging.geocommons.com/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
+<script src="http://maps.worldbank.org/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
 
 
 <script src="/map.js" type="text/javascript"></script>
@@ -338,7 +338,7 @@
     <!--Red Footer Begins-->
     <div id="network-breadcrumb">
       <div class="limiter"> <span class="breadcrumb-link"><a class="breadcrumb-link-home">You are here</a></span>
-        <span class="breadcrumb-link breadcrumb-first"><a href="http://wbstaging.geocommons.com">Map</a></span>
+        <span class="breadcrumb-link breadcrumb-first"><a href="http://maps.worldbank.org">Map</a></span>
         <a class="breadcrumb-link" href="/" title='World Bank: World'>World</a><a class="breadcrumb-link" href="/#region:latinamericaandcaribbean">Latin America and Caribbean</a><span class="breadcrumb-link breadcrumb-last"><a class="active" href="#">Bolivia</a></span>
         </div>
     </div>
