--- a/productline/PE/charts.html
+++ b/productline/PE/charts.html
@@ -15,7 +15,7 @@
   <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
   
 
-<script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/prototype.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://maps.worldbank.org/javascripts/prototype.js"></script>
 
   <script type="text/javascript" src="/js/jquery-1.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -30,9 +30,9 @@
   <script type="text/javascript" src="/js/effects.js"></script>  
 
 <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
-<script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/f1.api.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://maps.worldbank.org/javascripts/f1.api.js"></script>
 
-<script src="http://wbstaging.geocommons.com/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
+<script src="http://maps.worldbank.org/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
 
 
 <script src="/map.js" type="text/javascript"></script>
